--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
    <article>
       <script>
          /* Add content to web page */
-         document.write("<p>We are closed for the holiday and will reopen
-         at midnight tonight.</p>");
+         document.write("<p>We are closed for the holiday and will reopen at midnight tonight.</p>");
 
       </script>
    </article>
